[package]
name = "protomaps-alpha"
version = "0.0.1"
authors = ["Brandon Liu <brandon@protomaps.com>"]
license = "BSD"
edition = "2018"
keywords = ["graphics", "gis"]
repository = "https://github.com/protomaps/alpha"
description = "A retargetable rasterizer for map tiles."
readme = "README"
categories = ["graphics"]

[dependencies]
piet = { git = "https://github.com/bdon/piet", branch = "stroke_text" }
quick-protobuf = "^0.6"
log = "0.4.8"
serde = "^1.0"
serde_derive = "^1.0"

[target.'cfg(not(any(target_arch="wasm32", target_os="windows")))'.dependencies]
piet-cairo = { git = "https://github.com/bdon/piet", branch = "stroke_text" }
cairo-rs = { version = "0.7.1", default_features = false}

[dev-dependencies.cairo-rs]
version = "0.7.1"
features = ["png"]
default-features = false
