[package]
name = "protomaps2d"
version = "0.0.1"
authors = ["Brandon Liu <brandon@protomaps.com>"]
license = "BSD"
edition = "2018"
keywords = ["graphics", "gis"]
repository = "https://github.com/protomaps/alpha"
description = "2D rasterization library for map tiles."
readme = "README"
categories = ["graphics"]

[dependencies]
piet = { git = "https://github.com/bdon/piet", branch = "font_style_weight" }
# piet = { path = "../../rust/piet/piet" }
quick-protobuf = "^0.6"
log = "0.4.8"
serde = "^1.0"
serde_derive = "^1.0"

[target.'cfg(not(any(target_arch="wasm32", target_os="windows")))'.dependencies]
piet-cairo = { git = "https://github.com/bdon/piet", branch = "font_style_weight" }
# piet-cairo = { path = "../../rust/piet/piet-cairo" }
cairo-rs = { version = "0.8.1", features = ["png"]}
