[package]
name = "protomaps2d-web"
version = "0.0.1"
authors = ["Brandon Liu <brandon@protomaps.com>"]
license = "BSD"
edition = "2018"
keywords = ["graphics", "gis"]
repository = "https://github.com/protomaps/protomaps2d"
description = "2D rasterization library for vector map tiles - WebAssembly target"
readme = "README"
categories = ["graphics"]

[lib]
crate-type = ["cdylib"]

[dependencies]
console_error_panic_hook = "0.1.6"
piet-web = { git = "https://github.com/bdon/piet", branch = "font_style_weight" }
# piet-web = { path = "../../../rust/piet/piet-web" }
protomaps2d = { path = ".." }
console_log = "0.1"

[dependencies.wasm-bindgen]
version = "^0.2"
features = ["serde-serialize"]

[dependencies.web-sys]
version = "^0.3"
features = ["console", "CanvasRenderingContext2d", "Window", "Document", "Element", "HtmlElement", "HtmlCanvasElement"]

